# addok-sqlite-store

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
addok_sqlite/: plugin.py
addok_sqlite_store/: __init__.py
tests/: conftest.py  test_store.py
